# portable_kittentts_cpp

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  kitten_tts-script-example.bat
.github/workflows/: release.yml
portable_kittentts_cpp/: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  build.ps1  micro.bat  mini.bat  nano-int8.bat  nano.bat  run.bat  run.ps1
portable_kittentts_cpp/.github/workflows/: release.yml
portable_kittentts_cpp/scripts/: package-release.ps1  prepare-release-assets.ps1  validate-release-sources.ps1
portable_kittentts_cpp/src/: audio_player.hpp  bootstrapper.cpp  cli_help.hpp  kitten_tts.cpp  kitten_tts.hpp  main.cpp  npy_reader.cpp  npy_reader.hpp  pathcch_shim.cpp  text_preprocessor.cpp  text_preprocessor.hpp  tokenizer.hpp  utf8.hpp  wav_writer.hpp
